--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,21 +3,21 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.cyb.wework"
+        applicationId 'com.wym.wework'
         minSdkVersion 16
         targetSdkVersion 26
         versionCode 11
         versionName "1.10.0"
         // 只打包中文资源
-        resConfigs "zh","en"
+        resConfigs "zh", "en"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     signingConfigs {
-        release {
-            storeFile file("keystore_chenyuebo.jks")
-            storePassword "123456"
-            keyAlias "cyb"
-            keyPassword "123456"
+        realease {
+            keyAlias 'RedPacketHelper'
+            keyPassword '139678'
+            storeFile file('E:/WorkSpace/WeworkRedPacketHelper/keystore/siuming1')
+            storePassword '139678'
         }
     }
     buildTypes {
@@ -29,7 +29,6 @@ android {
             //移除无用的资源
             shrinkResources false
             // 签名配置
-            signingConfig signingConfigs.release
         }
         release {
             //是否混淆
@@ -39,11 +38,9 @@ android {
             //移除无用的资源
             shrinkResources false
             // 签名配置
-            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     android.applicationVariants.all { variant ->
         variant.outputs.all {
             def releaseTime = "";
@@ -57,13 +54,16 @@ android {
                     "_${defaultConfig.versionCode}_${buildType.name}_${releaseTime}.apk";
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.1.0'
+    implementation 'com.google.android.gms:play-services-auth:12.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
