--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId 'com.wym.wework'
-        minSdkVersion 16
+        applicationId 'com.wym.myassist'
+        minSdkVersion 18
         targetSdkVersion 26
-        versionCode 11
-        versionName "1.10.0"
+        versionCode 1
+        versionName '1.01.0'
         // 只打包中文资源
         resConfigs "zh", "en"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -19,6 +19,14 @@ android {
             storeFile file('E:/WorkSpace/WeworkRedPacketHelper/keystore/siuming1')
             storePassword '139678'
         }
+        config {
+        }
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
     }
     buildTypes {
         debug {
@@ -39,6 +47,7 @@ android {
             shrinkResources false
             // 签名配置
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.realease
         }
     }
     android.applicationVariants.all { variant ->
@@ -64,7 +73,6 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.google.android.gms:play-services-auth:12.0.1'
-    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
